@@ -23,4 +23,49 @@ class Tag < ActiveRecord::Base
   def count
     read_attribute(:count).to_i
   end
+  
+  class << self
+    # Calculate the tag counts for all tags.
+    #  :start_at - Restrict the tags to those created after a certain time
+    #  :end_at - Restrict the tags to those created before a certain time
+    #  :conditions - A piece of SQL conditions to add to the query
+    #  :limit - The maximum number of tags to return
+    #  :order - A piece of SQL to order by. Eg 'count desc' or 'taggings.created_at desc'
+    #  :at_least - Exclude tags with a frequency less than the given value
+    #  :at_most - Exclude tags with a frequency greater than the given value
+    def counts(options = {})
+      find(:all, options_for_counts(options))
+    end
+    
+    def options_for_counts(options = {})
+      options.assert_valid_keys :start_at, :end_at, :conditions, :at_least, :at_most, :order, :limit, :joins
+      options = options.dup
+      
+      start_at = sanitize_sql(["#{Tagging.table_name}.created_at >= ?", options.delete(:start_at)]) if options[:start_at]
+      end_at = sanitize_sql(["#{Tagging.table_name}.created_at <= ?", options.delete(:end_at)]) if options[:end_at]
+      
+      conditions = [
+        options.delete(:conditions),
+        start_at,
+        end_at
+      ].compact
+      
+      conditions = conditions.any? ? conditions.join(' AND ') : nil
+      
+      joins = ["INNER JOIN #{Tagging.table_name} ON #{Tag.table_name}.id = #{Tagging.table_name}.tag_id"]
+      joins << options.delete(:joins) if options[:joins]
+      
+      at_least  = sanitize_sql(['COUNT(*) >= ?', options.delete(:at_least)]) if options[:at_least]
+      at_most   = sanitize_sql(['COUNT(*) <= ?', options.delete(:at_most)]) if options[:at_most]
+      having    = [at_least, at_most].compact.join(' AND ')
+      group_by  = "#{Tag.table_name}.id, #{Tag.table_name}.name HAVING COUNT(*) > 0"
+      group_by << " AND #{having}" unless having.blank?
+      
+      { :select     => "#{Tag.table_name}.id, #{Tag.table_name}.name, COUNT(*) AS count", 
+        :joins      => joins.join(" "),
+        :conditions => conditions,
+        :group      => group_by
+      }.update(options)
+    end
+  end
 end
